# CbEngine

./: .gitignore  CMakeGen.bat  CMakeLists.txt
include/: defines.h
projects/test/: Sandbox.cpp  Testing.cpp
src/: CApplication.cpp  CApplication.h  CEngine.cpp  CEngine.h  Core.h  CpEngine.h  engine.cpp  engine.h  testing.cpp
src/render/: CAppWindow.cpp  CAppWindow.h  IWindow.cpp  IWindow.h
